<resources>
    <string name="app_name">Product List</string>
    <string name="all_products_deleted">All products deleted</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="input_your_text">Input your text...</string>
    <string name="no">No</string>
    <string name="product_deleted">Product deleted</string>
    <string name="product_deletion_title">Product deletion</string>
    <string name="product_deletion_message">Do you want to delete this product?</string>
    <string name="product_edit">Edit</string>
    <string name="products_list_empty">No products found</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_date">Date</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="balance">Balance</string>
    <string name="yes">Yes</string>
    <string name="desription">Description</string>

    <string-array name="main_product_context">
        <item>@string/product_edit</item>
        <item>@string/delete</item>
    </string-array>
</resources>
