<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/title"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#212121"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/price"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:inputType="number"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#212121"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/balance"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:inputType="number"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#212121"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDesription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/desription"
            android:textSize="18sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/input_your_text"
        android:paddingLeft="10dp"
        android:textColor="#000000"/>

</LinearLayout>